--- a/src/components/EvangelizaHeatmap.astro
+++ b/src/components/EvangelizaHeatmap.astro
@@ -1,9 +1,10 @@
 ---
 const id = 'map-evangeliza';
+const cspNonce = Astro.locals?.cspNonce;
 ---
 <div id={id} class="w-full h-[420px] rounded overflow-hidden ring-1 ring-gray-200 dark:ring-gray-700"></div>
 
-<script>
+<script nonce={cspNonce}>
   import 'leaflet/dist/leaflet.css';
   import L from 'leaflet';
   const map = L.map('%ID%'.replace('%ID%', 'map-evangeliza')).setView([4.7, -74.1], 5);
