--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -3,6 +3,7 @@
 import SEO from '@components/SEO.astro';
 import Header from '@components/Header.astro';
 import Footer from '@components/Footer.astro';
+import TurnstileProvider from '@components/TurnstileProvider.astro';
 
 const { title, description, image, type = 'website', structuredData, noindex = false } = Astro.props;
 ---
@@ -12,6 +13,7 @@ const { title, description, image, type = 'website', structuredData, noindex = f
     <SEO {title} {description} {image} {type} {structuredData} {noindex} />
     <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
     <link rel="stylesheet" href="/src/styles/global.css" />
+    <TurnstileProvider />
   </head>
   <body>
     <Header />
